Fixed spacing, name, icon glow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -186,7 +186,7 @@
 		}
 
 		a:hover {
-			color: #ff7496;
+			color: #18ffff;
 		}
 
 	strong, b {
@@ -215,7 +215,7 @@
 	h1 {
 		font-size: 1.85em;
 		letter-spacing: 0.22em;
-		margin: 0 0 0.525em 0;
+		margin: 1.5em 0 0.525em 0;
 	}
 
 	h2 {
@@ -380,7 +380,7 @@
 		input[type="tel"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #ff7496;
+			border-color: #18ffff;
 		}
 
 	select {
@@ -476,13 +476,13 @@
 
 		input[type="checkbox"]:checked + label:before,
 		input[type="radio"]:checked + label:before {
-			color: #ff7496;
+			color: #18ffff;
 			content: '\f00c';
 		}
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #ff7496;
+			border-color: #18ffff;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -770,7 +770,7 @@
 				}
 
 				ul.icons li a:hover:before {
-					text-shadow: 1.25px 0px 0px #ff7496, -1.25px 0px 0px #ff7496, 0px 1.25px 0px #ff7496, 0px -1.25px 0px #ff7496;
+					text-shadow: 1.25px 0px 0px #18ffff, -1.25px 0px 0px #18ffff, 0px 1.25px 0px #18ffff, 0px -1.25px 0px #18ffff;
 				}
 
 				ul.icons li a:before {
@@ -786,7 +786,7 @@
 				}
 
 				ul.icons li a:hover {
-					border-color: #ff7496;
+					border-color: #18ffff;
 				}
 
 		@media screen and (max-width: 480px) {
@@ -831,8 +831,8 @@
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			border-color: #ff7496;
-			color: #ff7496 !important;
+			border-color: #18ffff;
+			color: #18ffff !important;
 		}
 
 		input[type="submit"].icon,
